2023-07-20T01:21:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5605776470 # 1005
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-20
* notice: last 14d: unq all: 10 46
* notice: prev accum: outdated-unq outdated-all / unq all: 531 853 / 568 906
* notice: next accum: outdated-unq outdated-all / unq all: 536 861 / 568 907
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2023-07-05] / [2023-07-19]

2023-07-19T08:18:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5596719716 # 1003
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-19
* notice: last 14d: unq all: 13 53
* notice: prev accum: outdated-unq outdated-all / unq all: 531 853 / 566 904
* notice: next accum: outdated-unq outdated-all / unq all: 531 853 / 568 906
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-07-19]

2023-07-18T16:22:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5589934862 # 1001
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-18
* notice: last 14d: unq all: 13 51
* notice: prev accum: outdated-unq outdated-all / unq all: 529 850 / 566 903
* notice: next accum: outdated-unq outdated-all / unq all: 531 853 / 566 904
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-07-04] / [2023-07-18]

2023-07-18T08:20:36Z: