@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-20T01:21:44Z",
-  "count_outdated" : 861,
-  "uniques_outdated" : 536,
-  "count" : 907,
-  "uniques" : 568,
+  "timestamp" : "2023-07-20T16:20:04Z",
+  "count_outdated" : 865,
+  "uniques_outdated" : 539,
+  "count" : 908,
+  "uniques" : 569,
   "clones" : [
-    {
-      "timestamp": "2023-07-06T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 2, 4 ],
-      "count_decinc": [ 0, 4 ],
-      "uniques": 3,
-      "uniques_minmax": [ 2, 3 ],
-      "uniques_decinc": [ 0, 3 ]
-    },
     {
       "timestamp": "2023-07-07T00:00:00Z",
       "count": 1,
@@ -130,6 +121,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-07-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
