@@ -1,12 +1,7 @@
 {
-  "count": 46,
-  "uniques": 10,
+  "count": 43,
+  "uniques": 9,
   "clones": [
-    {
-      "timestamp": "2023-07-06T00:00:00Z",
-      "count": 4,
-      "uniques": 3
-    },
     {
       "timestamp": "2023-07-07T00:00:00Z",
       "count": 1,
@@ -71,6 +66,11 @@
       "timestamp": "2023-07-19T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-07-20T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
