@@ -1,3 +1,12 @@
+2023-07-20T16:20:04Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5613450069 # 1007
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-20
+* notice: last 14d: unq all: 9 43
+* notice: prev accum: outdated-unq outdated-all / unq all: 536 861 / 568 907
+* notice: next accum: outdated-unq outdated-all / unq all: 539 865 / 569 908
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2023-07-06] / [2023-07-20]
+
 2023-07-20T01:21:44Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5605776470 # 1005
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-20
